upgrading stuff towards java21
Things don't work, let's see how it goes.